<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".MostrarDatos">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/lblNombre"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblDatoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/lblFecha"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/lblDatoFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/lblEmail"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblDatoMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/lblTelefono"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblDatoTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/lblMensaje"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblDatoMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/btnEditar"
            android:theme="@style/ButtonRaised" />

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnConfirmar"
            android:theme="@style/ButtonRaised" />
    </TableRow>
</LinearLayout>